Fixed issues with dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,7 @@
 
 /* Global body */
 body {
-	@apply dark:bg-zinc-900 dark:text-white transition-colors overflow-x-hidden;
+	@apply gdark:bg-zinc-900 gdark:text-white transition-colors overflow-x-hidden;
 }
 
 /* Global headings */
